// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Device Map Component Renders Correctly 1`] = `
<div
  className="device-map mb-10 mt-10"
>
  <div
    className="head-device is-flex"
  >
    <h1
      className="has-text-white has-text-weight-bold is-size-5 mb-10"
    />
  </div>
  <div
    className="rest-of-devices"
  >
    <div
      className="mt-5 mb-5 is-flex child-device"
      key="048572340857NNDAll in one"
    >
      <span
        className="has-text-white has-text-weight-bold"
      >
        All in one
      </span>
      <span
        className="has-text-weight-bold"
      >
        048572340857NND
      </span>
    </div>
    <div
      className="mt-5 mb-5 is-flex child-device"
      key="048572340857NNDInverter"
    >
      <span
        className="has-text-white has-text-weight-bold"
      >
        Inverter
      </span>
      <span
        className="has-text-weight-bold"
      >
        048572340857NND
      </span>
    </div>
    <div
      className="mt-5 mb-5 is-flex child-device"
      key="048572340857NNDMIDC"
    >
      <span
        className="has-text-white has-text-weight-bold"
      >
        MIDC
      </span>
      <span
        className="has-text-weight-bold"
      >
        048572340857NND
      </span>
    </div>
    <div
      className="mt-5 mb-5 is-flex child-device"
      key="048572340857NNDBattery"
    >
      <span
        className="has-text-white has-text-weight-bold"
      >
        Battery
      </span>
      <span
        className="has-text-weight-bold"
      >
        048572340857NND
      </span>
    </div>
  </div>
</div>
`;

exports[`Device Map Component Renders without data 1`] = `
<div
  className="device-map mb-10 mt-10"
>
  <div
    className="head-device is-flex"
  >
    <h1
      className="has-text-white has-text-weight-bold is-size-5 mb-10"
    />
  </div>
  <div
    className="rest-of-devices"
  >
    <div
      className="mt-5 mb-5 is-flex child-device"
      key="DEVICEMAP_ERRORNO_DEVICEMAP"
    >
      <span
        className="has-text-white has-text-weight-bold"
      >
        NO_DEVICEMAP
      </span>
      <span
        className="has-text-weight-bold"
      >
        DEVICEMAP_ERROR
      </span>
    </div>
  </div>
</div>
`;
